Updated header with my name

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>foobar</title>
     </head>
     <body>
-        <h2>foobar</h2>
+        <h2>Dakota Nelson</h2>
     </body>
 </html>
